--- a/web/index.html
+++ b/web/index.html
@@ -49,6 +49,14 @@
     </div>
 
     <div class="col-lg-12">
+    <ul class="breadcrumb" style="margin-bottom: 5px;">
+        <li><a href="javascript:void(0)">Home</a></li>
+        <li><a href="javascript:void(0)">Library</a></li>
+        <li class="active">Data</li>
+    </ul>
+        </div>
+
+    <div class="col-lg-12">
         <div class="bs-component">
             <div class="jumbotron">
                 <div class="container">
