--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,4 @@
-<html>
+<html ng-app>
 
 <head>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
@@ -8,68 +8,74 @@
     <link href="css/ripples.min.css" rel="stylesheet">
     <link href="mdt.css" rel="stylesheet">
 
+    <script src="packages/web_components/webcomponents.js"></script>
+    <script src="packages/web_components/dart_support.js"></script>
+
 </head>
-
 <body>
-    <div class="col-lg-12">
-        <div class="bs-component">
-            <div class="navbar navbar-default">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse"
-                            data-target=".navbar-responsive-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="javascript:void(0)">MDT
-                        <div class="ripple-wrapper"></div>
-                    </a>
-                </div>
-                <div class="navbar-collapse navbar-responsive-collapse collapse in" aria-expanded="true">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#loginModal" data-toggle="modal">Login</a></li>
-                        <li><a href="#registerModal" data-toggle="modal">Register</a></li>
-                        <li class="dropdown">
-                            <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle"
-                               data-toggle="dropdown"
-                               aria-expanded="false">Account <b class="caret"></b>
+<div class="col-lg-12">
+    <div class="bs-component">
+        <div class="navbar navbar-default">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                        data-target=".navbar-responsive-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="javascript:void(0)">MDT
+                    <div class="ripple-wrapper"></div>
+                </a>
+            </div>
+            <div class="navbar-collapse navbar-responsive-collapse collapse in" aria-expanded="true">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#loginModal" data-toggle="modal">Login</a></li>
+                    <li><a href="#registerModal" data-toggle="modal">Register</a></li>
+                    <li class="dropdown">
+                        <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle"
+                           data-toggle="dropdown"
+                           aria-expanded="false">Account <b class="caret"></b>
 
-                                <div class="ripple-wrapper"></div>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="javascript:void(0)">Settings</a></li>
-                                <li class="divider"></li>
-                                <li><a href="javascript:void(0)">Logout</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+                            <div class="ripple-wrapper"></div>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="javascript:void(0)">Settings</a></li>
+                            <li class="divider"></li>
+                            <li><a href="javascript:void(0)">Logout</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="col-lg-12">
+<div class="col-lg-12">
     <ul class="breadcrumb" style="margin-bottom: 5px;">
-        <li><a href="javascript:void(0)">Home</a></li>
-        <li><a href="javascript:void(0)">Library</a></li>
+        <li><a href="#/home">Home</a></li>
+        <li><a href="#/app/1234">Applications</a></li>
         <li class="active">Data</li>
     </ul>
-        </div>
+</div>
 
-    <div class="col-lg-12">
-        <div class="bs-component">
-            <div class="jumbotron">
-                <div class="container">
-                    <h1 class="">Mobile Distribution Tool </h1>
+<div id="pageContent" class="col-lg-12">
+    <ng-view></ng-view>
+</div>
 
-                    <p>Manage yours users and application and download artifacts.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--  <div class="col-lg-12">
+     <div class="bs-component">
+         <div class="jumbotron">
+             <div class="container">
+                 <h1 class="">Mobile Distribution Tool </h1>
+
+                 <p>Manage yours users and application and download artifacts.</p>
+             </div>
+         </div>
+     </div>
+ </div>-->
 
 <div class="row">
-        <div id="loginModal" class="modal fade">
+    <div id="loginModal" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -113,62 +119,63 @@
     </div>
 </div>
 
-    <!--
-    <div id="adminUsers" class="isSysAdmin">
 
-    </div>
+<!--
+<div id="adminUsers" class="isSysAdmin">
 
-    <div id="applicationList" class="isConnected">
+</div>
 
-    </div>
+<div id="applicationList" class="isConnected">
 
-    <div id="artifactList" class="isConnected">
+</div>
 
-    </div>
+<div id="artifactList" class="isConnected">
 
-    Your site -->
+</div>
 
-    <div class="alert alert-dismissable alert-warning">
-        <button type="button" class="close" data-dismiss="alert">×</button>
-        <h4>Warning!</h4>
+Your site -->
 
-        <p>Best check yo self, you're not looking too good. Nulla vitae elit libero, a pharetra augue. Praesent commodo
-            cursus magna, <a href="javascript:void(0)" class="alert-link">vel scelerisque nisl consectetur et</a>.</p>
-    </div>
+<div class="alert alert-dismissable alert-warning">
+    <button type="button" class="close" data-dismiss="alert">×</button>
+    <h4>Warning!</h4>
 
-    <h1>You can add your site here.</h1>
+    <p>Best check yo self, you're not looking too good. Nulla vitae elit libero, a pharetra augue. Praesent commodo
+        cursus magna, <a href="javascript:void(0)" class="alert-link">vel scelerisque nisl consectetur et</a>.</p>
+</div>
 
-    <h2>To ensure that material-design theme is working, check out the buttons below.</h2>
+<h1>You can add your site here.</h1>
 
-    <h3 class="text-muted">If you can see the ripple effect on clicking them, then you are good to go!</h3>
+<h2>To ensure that material-design theme is working, check out the buttons below.</h2>
+
+<h3 class="text-muted">If you can see the ripple effect on clicking them, then you are good to go!</h3>
 
 
-    <p class="bs-component">
-        <a href="javascript:void(0)" class="btn btn-default">Default</a>
-        <a href="javascript:void(0)" class="btn btn-primary">Primary</a>
-        <a href="javascript:void(0)" class="btn btn-success">Success</a>
-        <a href="javascript:void(0)" class="btn btn-info">Info</a>
-        <a href="javascript:void(0)" class="btn btn-warning">Warning</a>
-        <a href="javascript:void(0)" class="btn btn-danger">Danger</a>
-        <a href="javascript:void(0)" class="btn btn-link">Link</a>
-    </p>
+<p class="bs-component">
+    <a href="javascript:void(0)" class="btn btn-default">Default</a>
+    <a href="javascript:void(0)" class="btn btn-primary">Primary</a>
+    <a href="javascript:void(0)" class="btn btn-success">Success</a>
+    <a href="javascript:void(0)" class="btn btn-info">Info</a>
+    <a href="javascript:void(0)" class="btn btn-warning">Warning</a>
+    <a href="javascript:void(0)" class="btn btn-danger">Danger</a>
+    <a href="javascript:void(0)" class="btn btn-link">Link</a>
+</p>
 
-    <!-- Your site ends -->
+<!-- Your site ends -->
 
-    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-    <script src="js/ripples.min.js"></script>
-    <script src="js/material.min.js"></script>
-    <script type="application/dart" src="main.dart"></script>
-    <script src="packages/browser/dart.js"></script>
-    <script>
-        $(document).ready(function () {
-            // This command is used to initialize some elements and make them work properly
-            $.material.init();
-        });
-    </script>
+<script src="js/ripples.min.js"></script>
+<script src="js/material.min.js"></script>
+<script type="application/dart" src="main.dart"></script>
+<script src="packages/browser/dart.js"></script>
+<script>
+   $(document).ready(function () {
+        // This command is used to initialize some elements and make them work properly
+        $.material.init();
+    });
+</script>
 
-    </body>
+</body>
 
 </html>
