--- a/web/index.html
+++ b/web/index.html
@@ -78,16 +78,31 @@
     <div id="loginModal" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title">Login</h4>
-                </div>
                 <div class="modal-body">
-                    <p>One fine body…</p>
+                    <form class="form-horizontal">
+                        <fieldset>
+                            <legend>Login</legend>
+                            <div class="form-group">
+                                <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+
+                                <div class="col-lg-10">
+                                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword" class="col-lg-2 control-label">Password</label>
+
+                                <div class="col-lg-10">
+                                    <input type="password" class="form-control" id="inputPassword"
+                                           placeholder="Password">
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-primary">Login</button>
                 </div>
             </div>
         </div>
@@ -95,16 +110,38 @@
     <div id="registerModal" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title">Register</h4>
-                </div>
                 <div class="modal-body">
-                    <p>One fine body…</p>
+                    <form class="form-horizontal">
+                        <fieldset>
+                            <legend>Register</legend>
+                            <div class="form-group">
+                                <label for="inputUsername" class="col-lg-2 control-label">User Name</label>
+
+                                <div class="col-lg-10">
+                                    <input type="email" class="form-control" id="inputUsername" placeholder="Username">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+
+                                <div class="col-lg-10">
+                                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword" class="col-lg-2 control-label">Password</label>
+
+                                <div class="col-lg-10">
+                                    <input type="password" class="form-control" id="inputPassword"
+                                           placeholder="Password">
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-primary">Register</button>
                 </div>
             </div>
         </div>
