--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
 <div class="col-lg-12">
     <ul class="breadcrumb" style="margin-bottom: 5px;">
         <li><a href="#/home">Home</a></li>
-        <li><a href="#/app/1234">Applications</a></li>
+        <li><a href="#/apps">Applications</a></li>
         <li class="active">Data</li>
     </ul>
 </div>
