working in progress...

--- a/web/pages/Users/register.html
+++ b/web/pages/Users/register.html
@@ -1,5 +1,4 @@
-<div class="row">
-    <div id="registerModal" class="modal fade">
+
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -33,9 +32,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" ng-click="register()" >Register</button>
+                    <button type="button" class="btn btn-primary" ng-click="registerUser(username,email,password)" >Register</button>
                 </div>
             </div>
         </div>
-    </div>
-</div>
