--- a/web/pages/main_page.html
+++ b/web/pages/main_page.html
@@ -15,7 +15,7 @@
             <div class="navbar-collapse navbar-responsive-collapse collapse in" aria-expanded="true">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#loginModal" data-toggle="modal">Login</a></li>
-                    <li><a href="#registerModal" data-toggle="modal">Register</a></li>
+                    <li><a href="#" href1="#registerModal" ng-click="displayRegisterPopup()" data-toggle="modal">Register</a></li>
                     <li class="dropdown">
                         <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle"
                            data-toggle="dropdown"
@@ -40,6 +40,7 @@
 </div>
 
 <div class="row">
+
     <div id="loginModal" class="modal fade" >
         <div class="modal-dialog">
             <div class="modal-content">
