working in progress...

--- a/web/pages/main_page.html
+++ b/web/pages/main_page.html
@@ -14,7 +14,7 @@
             </div>
             <div class="navbar-collapse navbar-responsive-collapse collapse in" aria-expanded="true">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#loginModal" data-toggle="modal">Login</a></li>
+                    <li><a href="#" data-toggle="modal" ng-click="displayLoginPopup()">Login</a></li>
                     <li><a href="#" href1="#registerModal" ng-click="displayRegisterPopup()" data-toggle="modal">Register</a></li>
                     <li class="dropdown">
                         <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle"
