working in progress

--- a/web/index.html
+++ b/web/index.html
@@ -13,182 +13,10 @@
 
 </head>
 <body>
-<div class="col-lg-12">
-    <div class="bs-component">
-        <div class="navbar navbar-default">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target=".navbar-responsive-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="javascript:void(0)">MDT
-                    <div class="ripple-wrapper"></div>
-                </a>
-            </div>
-            <div class="navbar-collapse navbar-responsive-collapse collapse in" aria-expanded="true">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#loginModal" data-toggle="modal">Login</a></li>
-                    <li><a href="#registerModal" data-toggle="modal">Register</a></li>
-                    <li class="dropdown">
-                        <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle"
-                           data-toggle="dropdown"
-                           aria-expanded="false">Account <b class="caret"></b>
-
-                            <div class="ripple-wrapper"></div>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="javascript:void(0)">Settings</a></li>
-                            <li class="divider"></li>
-                            <li><a href="javascript:void(0)">Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="col-lg-12">
-    <ul class="breadcrumb" style="margin-bottom: 5px;">
-        <li><a href="#/home">Home</a></li>
-        <li><a href="#/apps">Applications</a></li>
-        <li class="active">Data</li>
-    </ul>
-</div>
-
-<div id="pageContent" class="col-lg-12">
-    <ng-view></ng-view>
-</div>
-
-<test_comp>
-    </test_comp>
-
-<div class="row">
-    <div id="loginModal" class="modal fade" >
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <form class="form-horizontal">
-                        <fieldset>
-                            <legend>Login</legend>
-                            <div class="form-group" >
-                                <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-
-                                <div class="col-lg-10">
-                                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-
-                                <div class="col-lg-10">
-                                    <input type="password" class="form-control" id="inputPassword"
-                                           placeholder="Password">
-                                </div>
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" ng-click="testUser()" class="btn btn-primary">Login</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="registerModal" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <form class="form-horizontal">
-                        <fieldset>
-                            <legend>Register</legend>
-                            <div class="form-group">
-                                <label for="inputUsername" class="col-lg-2 control-label">User Name</label>
-
-                                <div class="col-lg-10">
-                                    <input type="email" class="form-control" id="inputUsername" placeholder="Username">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-
-                                <div class="col-lg-10">
-                                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-
-                                <div class="col-lg-10">
-                                    <input type="password" class="form-control" id="inputPassword"
-                                           placeholder="Password">
-                                </div>
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Register</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="panel panel-success">
-        <div class="panel-heading">
-            <h3 class="panel-title">Panel success</h3>
-        </div>
-        <div class="panel-body">
-            Panel content
-        </div>
-    </div>
-</div>
+<mdt_comp>
 
 
-<!--
-<div id="adminUsers" class="isSysAdmin">
-
-</div>
-
-<div id="applicationList" class="isConnected">
-
-</div>
-
-<div id="artifactList" class="isConnected">
-
-</div>
-
-Your site -->
-
-<div class="alert alert-dismissable alert-warning">
-    <button type="button" class="close" data-dismiss="alert">×</button>
-    <h4>Warning!</h4>
-
-    <p>Best check yo self, you're not looking too good. Nulla vitae elit libero, a pharetra augue. Praesent commodo
-        cursus magna, <a href="javascript:void(0)" class="alert-link">vel scelerisque nisl consectetur et</a>.</p>
-</div>
-
-<h1>You can add your site here.</h1>
-
-<h2>To ensure that material-design theme is working, check out the buttons below.</h2>
-
-<h3 class="text-muted">If you can see the ripple effect on clicking them, then you are good to go!</h3>
-
-
-<p class="bs-component">
-    <a href="javascript:void(0)" class="btn btn-default">Default</a>
-    <a href="javascript:void(0)" class="btn btn-primary">Primary</a>
-    <a href="javascript:void(0)" class="btn btn-success">Success</a>
-    <a href="javascript:void(0)" class="btn btn-info">Info</a>
-    <a href="javascript:void(0)" class="btn btn-warning">Warning</a>
-    <a href="javascript:void(0)" class="btn btn-danger">Danger</a>
-    <a href="javascript:void(0)" class="btn btn-link">Link</a>
-</p>
-
-<!-- Your site ends -->
+</mdt_comp>
 
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
