working in progress

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,8 @@
     <link href="css/material.min.css" rel="stylesheet">
     <link href="css/ripples.min.css" rel="stylesheet">
     <link href="mdt.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
 
     <script src="packages/web_components/webcomponents.js"></script>
     <script src="packages/web_components/dart_support.js"></script>
