working in progress

--- a/web/main_page.html
+++ b/web/main_page.html
@@ -30,8 +30,8 @@
                     </li>
                 </ul>
                 <ul ng-unless="isUserConnected" class="nav navbar-nav navbar-right">
-                    <li><a href="#" data-toggle="modal" ng-click="displayLoginPopup()">Login</a></li>
-                    <li><a href="#" href1="#registerModal" ng-click="displayRegisterPopup()" data-toggle="modal">Register</a></li>
+                    <li><a href="javascript:void(0)" data-toggle="modal" ng-click="displayLoginPopup()">Login</a></li>
+                    <li><a href="javascript:void(0)" href1="#registerModal" ng-click="displayRegisterPopup()" data-toggle="modal">Register</a></li>
 
                 </ul>
             </div>
