working in progress

--- a/web/index.html
+++ b/web/index.html
@@ -6,12 +6,12 @@
     <link href="css/roboto.min.css" rel="stylesheet">
     <link href="css/material.min.css" rel="stylesheet">
     <link href="css/ripples.min.css" rel="stylesheet">
-    <link href="mdt.css" rel="stylesheet">
+    <link href="css/mdt.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
-
+<!--
     <script src="packages/web_components/webcomponents.js"></script>
-    <script src="packages/web_components/dart_support.js"></script>
+    <script src="packages/web_components/dart_support.js"></script>-->
 
 </head>
 <body>
