--- a/web/pages/main_page.html
+++ b/web/pages/main_page.html
@@ -38,7 +38,12 @@
         </div>
     </div>
 </div>
-
+<ol class="breadcrumb">
+    <li ng-repeat="route in routeHistory"><a href="#{{route['path']}}">{{route['name']}}</a></li>
+  <!--  <li><a href="#/home">Home</a></li>
+    <li><a href="#/apps">Library</a></li>
+    <li class="active">Data</li> -->
+</ol>
 <div id="pageContent" class="col-lg-12">
     <ng-view></ng-view>
 </div>
