trying to add icon managment

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-
+<script src="js/holder.min.js"></script>
 <script src="js/ripples.min.js"></script>
 <script src="js/material.min.js"></script>
 <script type="application/dart" src="main.dart"></script>
