try to update bootstrap material

--- a/web/pages/home.html
+++ b/web/pages/home.html
@@ -1,9 +1,13 @@
-<div class="bs-component">
-    <div class="jumbotron">
+<div class="row">
+    <div class="col-lg-12">
         <div class="container">
-            <h1 class="">Home Mobile Distribution Tool </h1>
+            <div class="jumbotron">
+                <div class="container">
+                    <h1 class="">Home Mobile Distribution Tool </h1>
 
-            <p>Manage yours users and application and download artifacts.</p>
+                    <p>Manage yours users and application and download artifacts.</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
