continue user administration

--- a/web/pages/main_page.html
+++ b/web/pages/main_page.html
@@ -11,6 +11,7 @@
                 <a class="navbar-brand mdtLogo" href="#/home">MDT
                     <div class="ripple-wrapper"></div>
                 </a>
+                <a class="navbar-brand" href="#/users">Users Administration</a>
             </div>
             <div class="navbar-collapse navbar-responsive-collapse collapse in" aria-expanded="true">
                 <ul ng-if="isUserConnected" class="nav navbar-nav navbar-right">
