add global css file

--- a/web/index.html
+++ b/web/index.html
@@ -4,13 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <!-- Include roboto.css to use the Roboto web font, material.css to include the theme and ripples.css to style the ripple effect -->
-    <link href="css/dist/roboto.min.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">
     <link href="css/dist/material.min.css" rel="stylesheet">
-    <link href="css/dist/ripples.min.css" rel="stylesheet">
-
-    <link href="css/mdt.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
 </head>
 <body>
 <mdt_comp>
