--- a/web_angular2/web/index.html
+++ b/web_angular2/web/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Mobile App Distribution Tool</title>
+    <base href="/web_angular2/web/">
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"> -->
