--- a/web_angular2/web/index.html
+++ b/web_angular2/web/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Mobile App Distribution Tool</title>
     <base href="/web_angular2/web/">
+
+    <title>Mobile App Distribution Tool</title>
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"> -->
@@ -10,7 +11,14 @@
           rel="stylesheet">
     <!-- CSS Files -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+
     <link href="assets/css/material-kit.css" rel="stylesheet">
+
+    <!--  Material Dashboard CSS    -->
+    <link href="assets/css/dashboard.css" rel="stylesheet"/>
+
+    <!--  MDT CSS    -->
+    <link href="assets/css/mdt-specific.css" rel="stylesheet"/>
 </head>
 <body>
  <mdt_comp> Loading ... MDT </mdt_comp>
@@ -23,5 +31,7 @@
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="assets/js/material.min.js"></script>
 <script src="assets/js/material-kit.js" type="text/javascript"></script>
+ <!-- Material Dashboard javascript methods -->
+ <script src="assets/js/material-dashboard.js"></script>
 </body>
 </html>
