--- a/web_angular2/web/lib/pages/application_list_component.html
+++ b/web_angular2/web/lib/pages/application_list_component.html
@@ -30,7 +30,7 @@
             <div  *ngFor="let app of allApplications" class="col-lg-3 col-md-6 col-sm-6">
                 <div class="mdt-card mdt-card-stats">
                     <div class="mdt-card-header" data-background-color="purple">
-                        <img class="card-image card-app-image" src="https://lh3.googleusercontent.com/K-MNjDiO2WwRNwJqPZu8Wd5eOmFEjLYkEEgjZlv35hTiua_VylRPb04Lig3YZXLERvI=w300"/>
+                        <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
                     </div>
                     <div class="mdt-card-content">
                         <p class="category">{{app.platform}}</p>
