--- a/web_angular2/web/lib/pages/application_list_component.html
+++ b/web_angular2/web/lib/pages/application_list_component.html
@@ -11,38 +11,63 @@
             </material-radio-group>
         </div>
         <div class="row">
-            <div  class="col-lg-3 col-md-6 col-sm-6">
-                <div class="mdt-card mdt-card-stats">
-                    <div class="mdt-card-header" data-background-color="purple">
-                        <img class="card-image card-app-image" src="https://lh3.googleusercontent.com/K-MNjDiO2WwRNwJqPZu8Wd5eOmFEjLYkEEgjZlv35hTiua_VylRPb04Lig3YZXLERvI=w300"/>
-                    </div>
-                    <div class="mdt-card-content">
-                        <p class="category">Android</p>
-                        <h3 class="title">My Office Phone V2</h3>
-                    </div>
-                    <div class="mdt-card-footer">
-                        <div class="stats">
-                            <p>Small app</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div  *ngFor="let app of allApplications" class="col-lg-3 col-md-6 col-sm-6">
-                <div class="mdt-card mdt-card-stats">
-                    <div class="mdt-card-header" data-background-color="purple">
-                        <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
-                    </div>
-                    <div class="mdt-card-content">
-                        <p class="category">{{app.platform}}</p>
-                        <h3 class="title">{{app.name}}</h3>
-                    </div>
-                    <div class="mdt-card-footer">
-                        <div class="stats">
-                            <p>{{app.description}}</p>
-                        </div>
+        <material-expansionpanel-set>
+            <material-expansionpanel name="Favorites">
+                <div class="container-fluid">
+                <div class="row">
+                    <div  *ngFor="let app of favoritesFilteredApplications" class="col-lg-4 col-md-6 col-sm-6">
+                        <a href="javascript:void(0)"><div class="mdt-card mdt-card-stats">
+                            <div class="mdt-card-header" data-background-color="purple">
+                                <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
+                            </div>
+                            <div class="mdt-card-content">
+                                <p class="category" >{{app.platform}}</p>
+                                <h3 class="title">{{app.name}}</h3>
+                            </div>
+                            <div class="mdt-card-footer">
+                                <div class="stats">
+                                    <p>{{app.description}}</p>
+                                </div>
+                            </div>
+                        </div></a>
                     </div>
                 </div>
-            </div>
+                </div>
+            </material-expansionpanel>
+            <material-expansionpanel name="All">
+                <div class="row">
+                    <div  *ngFor="let app of allFilteredApplications" class="col-lg-4 col-md-6 col-sm-6">
+                        <a href="javascript:void(0)"><div class="mdt-card mdt-card-stats">
+                            <div class="mdt-card-header" data-background-color="purple">
+                                <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
+                            </div>
+                            <div class="mdt-card-content">
+                                <p class="category" >{{app.platform}}</p>
+                                <h3 class="title">{{app.name}}</h3>
+                            </div>
+                            <div class="mdt-card-footer">
+                                <div class="stats">
+                                    <p>{{app.description}}</p>
+                                </div>
+                            </div>
+                        </div></a>
+                    </div>
+                </div>
+            </material-expansionpanel>
+        </material-expansionpanel-set>
         </div>
+
+        <material-tab-panel>
+            <material-tab label="Favorites">
+                <div>
+
+                </div>
+            </material-tab>
+            <material-tab label="All">
+                <div>
+
+                </div>
+            </material-tab>
+        </material-tab-panel>
     </div>
 </div>
