--- a/web_angular2/web/testApps.html
+++ b/web_angular2/web/testApps.html
@@ -117,6 +117,22 @@
             </div>
             <div  class="col-lg-3 col-md-6 col-sm-6">
                 <div class="mdt-card mdt-card-stats">
+                    <div class="mdt-card-header" data-background-color="purple">
+                        <img class="card-image card-app-image" src="https://lh3.googleusercontent.com/K-MNjDiO2WwRNwJqPZu8Wd5eOmFEjLYkEEgjZlv35hTiua_VylRPb04Lig3YZXLERvI=w300"/>
+                    </div>
+                    <div class="mdt-card-content">
+                        <p class="category">Android</p>
+                        <h3 class="title">NED</h3>
+                    </div>
+                    <div class="mdt-card-footer">
+                        <div class="stats">
+                            <p>Small app</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div  class="col-lg-3 col-md-6 col-sm-6">
+                <div class="mdt-card mdt-card-stats">
                     <div class="mdt-card-header" data-background-color="orange">
                         <img class="card-image-headline" src="https://lh3.googleusercontent.com/K-MNjDiO2WwRNwJqPZu8Wd5eOmFEjLYkEEgjZlv35hTiua_VylRPb04Lig3YZXLERvI=w300"/>
 
