--- a/web_angular2/web/lib/pages/application_list_component.html
+++ b/web_angular2/web/lib/pages/application_list_component.html
@@ -2,72 +2,50 @@
     <div class="container-fluid">
         <div class="row">
             <material-radio-group>
-                <material-radio [checked]="true">All
-                </material-radio>
-                <material-radio>Android
-                </material-radio>
-                <material-radio>iOS
-                </material-radio>
+                <material-radio *ngFor="let filter of allPlatformsFilters" [checked]="filter == currentSelectedPlatform" (click)="selectFilter(filter)">{{filter}} </material-radio>
             </material-radio-group>
         </div>
-        <div class="row">
-        <material-expansionpanel-set>
-            <material-expansionpanel name="Favorites">
-                <div class="container-fluid">
-                <div class="row">
-                    <div  *ngFor="let app of favoritesFilteredApplications" class="col-lg-4 col-md-6 col-sm-6">
-                        <a href="javascript:void(0)"><div class="mdt-card mdt-card-stats">
-                            <div class="mdt-card-header" data-background-color="purple">
-                                <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
+        <div class="tim row">
+            <h2>Favorites</h2>
+            <div class="row">
+                <div  *ngFor="let app of favoritesFilteredApplications" class="col-lg-4 col-md-6 col-sm-6">
+                    <a href="javascript:void(0)"><div class="mdt-card mdt-card-stats">
+                        <div class="mdt-card-header" data-background-color="purple">
+                            <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
+                        </div>
+                        <div class="mdt-card-content">
+                            <p class="category" >{{app.platform}}</p>
+                            <h3 class="title">{{app.name}}</h3>
+                        </div>
+                        <div class="mdt-card-footer">
+                            <div class="stats">
+                                <p>{{app.description}}</p>
                             </div>
-                            <div class="mdt-card-content">
-                                <p class="category" >{{app.platform}}</p>
-                                <h3 class="title">{{app.name}}</h3>
-                            </div>
-                            <div class="mdt-card-footer">
-                                <div class="stats">
-                                    <p>{{app.description}}</p>
-                                </div>
-                            </div>
-                        </div></a>
-                    </div>
+                        </div>
+                    </div></a>
                 </div>
-                </div>
-            </material-expansionpanel>
-            <material-expansionpanel name="All">
-                <div class="row">
-                    <div  *ngFor="let app of allFilteredApplications" class="col-lg-4 col-md-6 col-sm-6">
-                        <a href="javascript:void(0)"><div class="mdt-card mdt-card-stats">
-                            <div class="mdt-card-header" data-background-color="purple">
-                                <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
-                            </div>
-                            <div class="mdt-card-content">
-                                <p class="category" >{{app.platform}}</p>
-                                <h3 class="title">{{app.name}}</h3>
-                            </div>
-                            <div class="mdt-card-footer">
-                                <div class="stats">
-                                    <p>{{app.description}}</p>
-                                </div>
-                            </div>
-                        </div></a>
-                    </div>
-                </div>
-            </material-expansionpanel>
-        </material-expansionpanel-set>
+            </div>
         </div>
-
-        <material-tab-panel>
-            <material-tab label="Favorites">
-                <div>
-
+        <div class="tim row">
+            <h2>Other</h2>
+            <div class="row">
+                <div  *ngFor="let app of allFilteredApplications" class="col-lg-4 col-md-6 col-sm-6">
+                    <a href="javascript:void(0)"><div class="mdt-card mdt-card-stats">
+                        <div class="mdt-card-header" data-background-color="purple">
+                            <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
+                        </div>
+                        <div class="mdt-card-content">
+                            <p class="category" >{{app.platform}}</p>
+                            <h3 class="title">{{app.name}}</h3>
+                        </div>
+                        <div class="mdt-card-footer">
+                            <div class="stats">
+                                <p>{{app.description}}</p>
+                            </div>
+                        </div>
+                    </div></a>
                 </div>
-            </material-tab>
-            <material-tab label="All">
-                <div>
-
-                </div>
-            </material-tab>
-        </material-tab-panel>
+            </div>
+        </div>
     </div>
 </div>
