--- a/web_angular2/web/lib/pages/application_list_component.html
+++ b/web_angular2/web/lib/pages/application_list_component.html
@@ -8,8 +8,9 @@
         <div class="tim row">
             <h2>Favorites</h2>
             <div class="row">
-                <div  *ngFor="let app of favoritesFilteredApplications" class="col-lg-4 col-md-6 col-sm-6">
-                    <a href="javascript:void(0)"><div class="mdt-card mdt-card-stats">
+                <!-- [routerLink]="['Versions', {appid: app.uuid}]" -->
+                <div  *ngFor="let app of favoritesFilteredApplications"  class="col-lg-4 col-md-6 col-sm-6">
+                    <a (click)="selectApplication(app.uuid)"><div class="mdt-card mdt-card-stats">
                         <div class="mdt-card-header" data-background-color="purple">
                             <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
                         </div>
@@ -30,7 +31,7 @@
             <h2>Other</h2>
             <div class="row">
                 <div  *ngFor="let app of allFilteredApplications" class="col-lg-4 col-md-6 col-sm-6">
-                    <a href="javascript:void(0)"><div class="mdt-card mdt-card-stats">
+                    <a href="javascript:void(0)" (click)="selectApplication(app.uuid)"><div class="mdt-card mdt-card-stats">
                         <div class="mdt-card-header" data-background-color="purple">
                             <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
                         </div>
