--- a/web_angular2/web/lib/pages/application_detail_component.html
+++ b/web_angular2/web/lib/pages/application_detail_component.html
@@ -22,13 +22,13 @@
     <div class="row">
         <material-expansionpanel-set>
             <div class="col-md-6 hidden-sm hidden-xs">
-                <material-expansionpanel wide *ngFor="let sortIdentifier of allSortedIdentifier; let even = even"  [ngClass]="even ? '':'hidden'" [showSaveCancel]=false secondaryText="{{branchForSortIdentifier(sortIdentifier)}}" name="{{versionForSortIdentifier(sortIdentifier)}}">
-                    <artifact *ngFor="let artifact of groupedArtifacts[sortIdentifier]"  [sortIdentifier]="sortIdentifier" [artifact]="artifact" [canDelete]="canAdmin()" [isLast]="false" ></artifact>
+                <material-expansionpanel wide *ngFor="let sortIdentifier of filteredSortedIdentifier; let even = even"  [ngClass]="even ? '':'hidden'" [showSaveCancel]=false secondaryText="{{branchForSortIdentifier(sortIdentifier)}}" name="{{versionForSortIdentifier(sortIdentifier)}}">
+                    <artifact *ngFor="let artifact of groupedArtifacts[sortIdentifier]"  [sortIdentifier]="sortIdentifier" [artifact]="artifact" [canDelete]="canAdmin()" ></artifact>
                 </material-expansionpanel>
             </div>
 
             <div class="col-md-6 hidden-sm hidden-xs">
-                <material-expansionpanel *ngFor="let sortIdentifier of allSortedIdentifier; let odd = odd" [ngClass]="odd ? '':'hidden'" [hideExpandedHeader]=true name="{{versionForSortIdentifier(sortIdentifier)}}">
+                <material-expansionpanel wide *ngFor="let sortIdentifier of filteredSortedIdentifier; let odd = odd" [ngClass]="odd ? '':'hidden'" [showSaveCancel]=false secondaryText="{{branchForSortIdentifier(sortIdentifier)}}" name="{{versionForSortIdentifier(sortIdentifier)}}">
                     <artifact *ngFor="let artifact of groupedArtifacts[sortIdentifier]"  [sortIdentifier]="sortIdentifier" [artifact]="artifact" [canDelete]="canAdmin()"></artifact>
                 </material-expansionpanel>
             </div>
