--- a/web_angular2/web/index.html
+++ b/web_angular2/web/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <!--  <base href="/web_angular2/web/"> -->
-    <script>document.write('<base href="' + document.location + '" />');</script>
+    <base href="/web_angular2/web/">
+    <!--<script>document.write('<base href="' + document.location + '" />');</script> -->
   <!--  <base href="/"> -->
 
     <title>Mobile App Distribution Tool</title>
